--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="modulepreload" href="/assets/vendor.973dd1df.js">
   </head>
   <body>
+    <script type="importmap">
+			{
+				"imports": {
+					"three": "https://threejs.org/build/three.module.js"
+				}
+			}
+		</script>
     
   </body>
 </html>
