--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
         margin: 0px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/index.51dbb039.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.973dd1df.js">
+    <script type="module" crossorigin src="./assets/index.51dbb039.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.973dd1df.js">
   </head>
   <body>
-    <script type="importmap">
-			{
-				"imports": {
-					"three": "https://threejs.org/build/three.module.js"
-				}
-			}
-		</script>
     
   </body>
 </html>
